[tool.poetry]
name = "genailab"
version = "0.1.0"
description = "AI Lab"
authors = ["dzung.tr@outlook.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
